@@ -362,11 +362,13 @@
 #gptofoo escp2-ex printer/Epson-Stylus_Photo_EX
 #gptofoo escp2-ex3 printer/Epson-Stylus_Photo_EX3
 #gptofoo escp2-r1800 printer/Epson-Stylus_Photo_R1800
+#gptofoo escp2-r2400 printer/Epson-Stylus_Photo_R2400
 #gptofoo escp2-r200 printer/Epson-Stylus_Photo_R200
 #gptofoo escp2-r210 printer/Epson-Stylus_Photo_R210
 #gptofoo escp2-r220 printer/Epson-Stylus_Photo_R220
-#gptofoo escp2-r2400 printer/Epson-Stylus_Photo_R2400
 #gptofoo escp2-r230 printer/Epson-Stylus_Photo_R230
+#gptofoo escp2-r240 printer/Epson-Stylus_Photo_R240
+#gptofoo escp2-r245 printer/Epson-Stylus_Photo_R245
 #gptofoo escp2-r260 printer/Epson-Stylus_Photo_R260
 #gptofoo escp2-r265 printer/Epson-Stylus_Photo_R265
 #gptofoo escp2-r270 printer/Epson-Stylus_Photo_R270
