@@ -1,5 +1,5 @@
 /*
- * "$Id: xml.c,v 1.33 2004/09/17 18:38:27 rleigh Exp $"
+ * "$Id: xml.c,v 1.34 2007/05/05 17:26:57 rlk Exp $"
  *
  *   XML parser - process Gutenprint XML data with mxml.
  *
@@ -161,9 +161,11 @@ stp_xml_init(void)
     }
 
   /* Set some locale facets to "C" */
+#ifdef ENABLE_NLS
   saved_lc_collate = setlocale(LC_COLLATE, "C");
   saved_lc_ctype = setlocale(LC_CTYPE, "C");
   saved_lc_numeric = setlocale(LC_NUMERIC, "C");
+#endif
 
   xml_is_initialised = 1;
 }
@@ -184,9 +186,11 @@ stp_xml_exit(void)
     return;
 
   /* Restore locale */
+#ifdef ENABLE_NLS
   setlocale(LC_COLLATE, saved_lc_collate);
   setlocale(LC_CTYPE, saved_lc_ctype);
   setlocale(LC_NUMERIC, saved_lc_numeric);
+#endif
   xml_is_initialised = 0;
 }
 
